# CubicLagrangeMinimize

./: .gitignore  README.md
cpp/: CMakeLists.txt  Makefile
cpp/include/: CubicLagrangeMinimize.hpp
cpp/src/: CubicLagrangeMinimize.cpp  tests.cpp
python/: CubicLagrangeMinimize.py
